--- a/trunk/bochs/CHANGES
+++ b/trunk/bochs/CHANGES
@@ -77,6 +77,7 @@ Changes after 2.6.11:
 - VGABIOS
   - LGPL'd VGABIOS updated from SVN.
     - Added initial version of the VGABIOS for Voodoo Banshee adapters.
+    - Added 'write character' support for Cirrus 8-bpp modes using bitblt engine.
     - Fixed text output in VGA graphics modes.
     - Some small fixes in the VBE code and several code optimizations.
 
